Fix scrollbar flash on load

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -519,7 +519,7 @@ li.crumb {
   font-size: 13px;
   margin: 0 !important;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 
   &.empty {
     display: none;
